[package]
name = "lighting_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maths = {git = "https://github.com/hindlet/rust_maths.git", package = "rust_maths", version = "*"}
graphics = {git = "https://github.com/hindlet/rust_vulkan_graphics.git", package = "rust_vulkan_graphics", version = "*"}
image = "0.24.6"
vulkano = "0.33.0"